# CJKB

./: CMakeLists.txt  README.md
CJJWHelper/: CMakeLists.txt  README.md
CJJWHelper/include/: Base64.hpp  CJJWHelper.h  encoding.hpp
CJJWHelper/libraries/: CMakeLists.txt
CJJWHelper/libraries/CURLWrapper/: CMakeLists.txt
CJJWHelper/libraries/HTMLReader/: CMakeLists.txt
CJJWHelper/libraries/HamOCR/: CMakeLists.txt  HDat.h  HDatHelper.cpp  HDatHelper.h  HamOCR.cpp  HamOCR.h  jw.hdat
CJJWHelper/libraries/HamOCR/CyImg/: Pixels.cpp  Pixels.h
CJJWHelper/libraries/HamOCR/CyImg/algorithm/: Binarize.hpp  Split.hpp
CJJWHelper/libraries/HamOCR/CyImg/algorithm/Hamming/: Hamming.hpp
CJJWHelper/libraries/HamOCR/CyImg/jpegHelper/: jpegHelper.cpp  jpegHelper.h
CJJWHelper/libraries/HamOCR/CyImg/pixel/: pixel.h
include/: commands.h  cron.h  database.h  utils.h
src/: commands.cpp  friend_msg_processor.cpp  group_msg_processor.cpp  main.cpp  temp_msg_processor.cpp
